update the notebook

--- a/scripts/setup_redis.ipynb
+++ b/scripts/setup_redis.ipynb
@@ -57,12 +57,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "png_file = osp.join(osp.join(data_path, 'boy'), '100018.gif')\n",
-    "endpoint = 'http://localhost:8000/retrieval/sample_query'\n",
+    "endpoint = 'http://localhost:8000/retrieval/sample_query?augmented=1'\n",
     "with open(png_file, 'rb') as f:\n",
     "    r = requests.post(endpoint, files={'query.gif': f})"
    ]
